# Reflection

./: CMakeLists.txt  LICENSE  README.md
include/: Function.h  Member.h  MetaProgramming.h  Metadata.h  MetadataCreator.h  Method.h  ReflectionMacros.h  ReflectionManager.h  String.h
src/: main.cpp
test/: Shape.h  Triangle.h
